# CommonTools

./: CMakeLists.txt  stdafx.h
app/: CMakeLists.txt
app/CommonTools/: CMakeLists.txt  ImageTools.cpp  file.txt  learn.txt
python/: CommonTools.py  boundingbox.py
